--- a/Proposal/abstract.tex
+++ b/Proposal/abstract.tex
@@ -1,4 +1,5 @@
-% !TeX root = proposal.tex
-%\chapter*{Abstract}
+!TeX root = proposal.tex
+\chapter{Abstract}
 
+During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. These internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and even further interact with third-parties to provide us better personalized services, recommendations, and advertisements. Existing research has shown that people are bad at privacy decisions. This argument is also true in IoT environment. In our previous studies, we utilized a data-driven approach to designing a set of privacy-setting interfaces to alleviate this problem in three different IoT contexts. We first collect data on how user would make decisions given certain IoT scenarios or privacy-setting questions, then we apply both statistical analysis and machine learning techniques to create smart defaults/profiles for users based on their different but cluster-able privacy disclose styles, and finally we create corresponding privacy-setting interfaces to integrate these smart defaults/profiles. In this proposed study, we will endeavor to evaluate the resulting household IoT privacy-setting interfaces. We present our evaluation system design, study plan, and expected results. 
 
