--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -101,7 +101,7 @@
 	\mainmatter % Begin main matter (pages are numbered with Arabic numerals)
 	%  ===========================================================================
 	
-	
+	\input{abstract.tex}
 	\setcounter{page}{1}
 	\input{1introduction.tex}
 	\input{2related_work.tex}
