--- a/Proposal/5fitnessIoT.tex
+++ b/Proposal/5fitnessIoT.tex
@@ -1,6 +1,8 @@
 % !TeX root = proposal.tex
 \chapter{Recommending Privacy Settings for Fitness IoT}\label{chapter:fitnessIoT}
 
+In Chapter~\ref{chapter:generalIoT} and~\ref{chapter:householdIoT}, we have discussed how we apply the data-driven approach in the general/public IoT and household IoT contexts, respectively, and developed corresponding IoT privacy-setting interface prototypes that integrated with smart defaults/profiles by predicting users' privacy decisions. In this chapter, we present the work completed to date in the areas of designing for privacy for Household IoT. We expand and improve upon the previously-developed data-driven approach to design privacy-setting interfaces for users of household IoT devices. Moving the context to a more narrow environment shifts the focus of the privacy decision from the entity collecting information (which was the dominant parameter in our previous work) to a more contextual evaluation of the content or nature of the information ~\cite{nissenbaum_privacy_2004}.
+
 In Chapter~\ref{chapter:householdIoT}, we have discussed recommending privacy preference for household IoT users. In this chapter, we present the work completed to date in the areas of recommending privacy for Fitness IoT. 
 
 Wearable fitness trackers are undoubtedly gaining popularity. As fitness-related data are persistently captured, stored, processed and shared by these devices and related services, the issue of privacy management is becoming increasingly urgent both for the user and the service, which has to respect privacy law, including the new European Union's General Data Protection Regulation (GDPR). This concerns all third parties that manage user data and has of course a major impact on personalization services.
