change to intro+related work update
Feb 22 changes after Bart's review

--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -1,16 +1,16 @@
 % !TeX root = proposal.tex
 \chapter{Introduction}\label{chapter:intro}
-During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. All these computers/devices have been integrated seamlessly into people's live, which is defined as ``Internet of Things". By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence that advances rapidly recently, these internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. They have been widely used in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
+During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. All these computers/devices have been integrated seamlessly into people's lives, which is defined as ``Internet of Things". By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence, these internet-connected devices are able to gain knowledge of their surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. They have been widely used in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
-A wide range of well-respected organizations has estimated that IoT will grow rapidly and bring huge social and economic potential. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020~\cite{press2014idc}. However, the rise of IoT also comes with a number of key security and privacy concerns. These include facilitation of the collection of large amounts of consumer data~\cite{weinberg2015internet}, processing and storing the data in ways unexpected by the consumer~\cite{lu2014overview}, and privacy and security breach~\cite{lu2014overview, yu2015handling}.
+A wide range of well-respected organizations has estimated that IoT will grow rapidly and bring huge social and economic potential. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020~\cite{press2014idc}. However, the rise of IoT also comes with a number of key security and privacy concerns. These include facilitation of the collection of large amounts of consumer data~\cite{weinberg2015internet}, processing and storing the data in ways unexpected by the consumer~\cite{lu2014overview}, and privacy and security breaches~\cite{lu2014overview, yu2015handling}.
 
 %When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of the IoT technology~\cite{knijnenburg2015user,pricewaterhousecoopers_smart_nodate}.
 
-In IoT environments, all the IoT devices are intended to collect information from the users to realize their functionality. Technical solutions can be used to minimize the data collected for such functionality~\cite{kobsa2006privacy,pfitzmann2001anonymity,verykios2004state}, but arguably, any useful functionality would necessitate at least some amount of personal data. Therefore, users will have to manage a trade-off between privacy and functionality: a solution that is fully privacy preserving will be limited in functionality, while a fully functional IoT solution would demand extensive data collection and sharing with others. Research has shown that user employ a method called \textit{privacy calculus}---i.e. that they make disclosure decisions by trading off the anticipated benefits with the risks of disclosure~\cite{culnan1993did,laufer1977privacy,taylor2009privacy}. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to carefully read the privacy policies or the privacy-settings that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. Moreover, each device will have its own fine-grained privacy settings (often hidden deep within an unassuming “other settings” category in the settings interface), and many inter dependencies exist between devices—-both in privacy and functionality. Therefore, there is a large chance that users would make inconsistent privacy decisions that either limit functionality of their IoT devices or that do not protect their privacy in the end. In addition, the current user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question:
+IoT devices are intended to collect information from the users to realize their functionality. Technical solutions can be used to minimize the data collected for such functionality~\cite{kobsa2006privacy,pfitzmann2001anonymity,verykios2004state}, but arguably, any useful functionality would necessitate at least some amount of personal data. Therefore, users will have to manage a trade-off between privacy and functionality: a solution that is fully privacy preserving will be limited in functionality, while a fully functional IoT solution would demand extensive data collection and sharing with others. Research has shown that user employ a method called \textit{privacy calculus}---i.e. that they make disclosure decisions by trading off the anticipated benefits with the risks of disclosure~\cite{culnan1993did,laufer1977privacy,taylor2009privacy}. However, as the diversity of IoT devices increases, it becomes increasingly difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to carefully read the privacy policies or the privacy-settings that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. Moreover, each device will have its own fine-grained privacy settings (often hidden deep within an unassuming “other settings” category in the settings interface), and many inter dependencies exist between devices—-both in privacy and functionality. Therefore, there is a large chance that users would make inconsistent privacy decisions that either limit functionality of their IoT devices or that do not protect their privacy in the end. In addition, the current user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question:
 
 \textbf{Can we simplify the task of managing privacy setting for users of different IoT contexts?}
 
-Prior research (chapter 2) has explored different approaches to this problem in other domains, including providing 1) transparency and control~\cite{egelman2009timing,acquisti2006imagined,knijnenburg2015user,benisch2011capturing,brodie2004personalization}, and 2) privacy nudges~\cite{almuhimedi2015your,liu2016follow,fu2014field,liu2016follow}. However, neither of them provides a satisfying solution in the IoT domain. Providing transparency and control does give users the freedom of managing their privacy in IoT according to their own privacy decisions, but privacy decision making is often not rational~\cite{knijnenburg2015user}. Thus, such extra transparency and control may increase the difficulty of setting appropriate privacy for users. Privacy nudges are usually implemented in the form of prompts, which will create constant noises given that the IoT systems usually work in the background. At the same time, they lack the personalization to the inherent diversity of users’ privacy preferences and the context-dependency of their decisions.
+Prior research (chapter 2) has explored different approaches to this problem in other domains, including providing 1) transparency and control~\cite{egelman2009timing,acquisti2006imagined,knijnenburg2015user,benisch2011capturing,brodie2004personalization}, and 2) privacy nudges~\cite{almuhimedi2015your,liu2016follow,fu2014field,liu2016follow}. However, neither of them provides a satisfying solution in the IoT domain. Providing transparency and control does give users the freedom of managing their privacy in IoT according to their own privacy decisions, but privacy decision making is often not rational~\cite{knijnenburg2015user}. Thus, such extra transparency and control may increase the difficulty of setting appropriate privacy for users. Privacy nudges are usually implemented in the form of prompts, which will create constant noises given that the IoT systems usually work in the background. At the same time, they lack personalization to the inherent diversity of users’ privacy preferences and the context-dependency of their decisions.
 
 To solve these problems in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. I therefore conducted a series of studies to contextualize the IoT users' decision making characteristics, and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behavior. 
 
