--- a/Proposal/4householdIoT.tex
+++ b/Proposal/4householdIoT.tex
@@ -122,14 +122,14 @@ After the introduction video, each participant was presented with 12 information
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{figures/scenario_attn.PNG}
-	\caption{\textcolor{blue}{Attention check question shown while participants are answering questions per scenario.}}
+	\caption{Attention check question shown while participants are answering questions per scenario.}
 	\label{fig:attn_S}
 \end{figure}
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{figures/time.PNG}
-	\caption{\textcolor{blue}{Attention check question asked to participants.}}
+	\caption{Attention check question asked to participants.}
 	\label{fig:attn_time}
 \end{figure}
 
