--- a/Proposal/abstract.tex
+++ b/Proposal/abstract.tex
@@ -1,5 +1,12 @@
-!TeX root = proposal.tex
-\chapter{Abstract}
+\chapter*{Abstract}
+The rapidly accelerating growth of these Internet of Things (IoT) technologies brings huge social and economic impact in many fields. However, the rise of IoT also comes with a number of privacy risks, including facilitation of the collection of large amounts of consumer data, processing and storing the data in ways unexpected by the consumer, and privacy and security breach.
 
-During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. These internet-connected devices are able to gain knowledge of its surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and even further interact with third-parties to provide us better personalized services, recommendations, and advertisements. Existing research has shown that people are bad at privacy decisions. This argument is also true in IoT environment. In our previous studies, we utilized a data-driven approach to designing a set of privacy-setting interfaces to alleviate this problem in three different IoT contexts. We first collect data on how user would make decisions given certain IoT scenarios or privacy-setting questions, then we apply both statistical analysis and machine learning techniques to create smart defaults/profiles for users based on their different but cluster-able privacy disclose styles, and finally we create corresponding privacy-setting interfaces to integrate these smart defaults/profiles. In this proposed study, we will endeavor to evaluate the resulting household IoT privacy-setting interfaces. We present our evaluation system design, study plan, and expected results. 
+Prior research has shown that privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of IoT. This is also true when it comes to the domain of setting privacy for IoT devices. The user interface for setting privacy preference of present IoT device is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is a demand to solve the following, urgent research question: How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?
 
+Existing solutions to this problem in other domains involve giving users more control over, and information about the privacy settings provided by the systems as well as privacy nudges. However, neither of them work well in the IoT domain. Providing transparency and control does give users the freedom of managing their privacy in IoT according to their own privacy decisions, but privacy decision making is often not rational. Thus, such extra transparency and control may increase the difficulty of setting appropriate privacy for users. Privacy nudges are usually implemented in the form of prompts, which will create constant noises given that the IoT systems usually work in the background. At the same time, they lack the personalization to the inherent diversity of users’ privacy preferences and the context-dependency of their decisions.
+
+To solve these problems in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. We therefore conducted a series of studies to contextualize the IoT users' decision making characteristics, and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behaviors. 
+
+In this proposal, we first present three studies on recommending privacy settings for different IoT environments, namely general/public IoT, household IoT, and fitness IoT, respectively. We developed and utilized a `` data-driven" approach in these three studies -- We first use statistical analysis and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then create a set of ``smart" privacy defaults/profiles based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click or by answering a few related questions.
+
+Our current biggest limitation for such ``data-driven" approach is that we did not test any of the presented interfaces, so we do not know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interfaces of recommending privacy-settings for household IoT. Our research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who has or want to adopt IoT devices.
