--- a/Proposal/2related_work.tex
+++ b/Proposal/2related_work.tex
@@ -1,36 +1,35 @@
 % !TeX root = proposal.tex
 \chapter{IoT technology and IoT Acceptance}\label{chapter:Relatedwork1}
-In this chapter, we first discuss how Internet-of-Things enter into people's daily lives, how people benefit from using IoT, what kinds of disadvantages IoT has brought, and the aspects that current IoT research has focused on. We then look at what factors are affecting potential IoT users when they are considering adopting this new technology.
+In this chapter, we first discuss how Internet-of-Things enter into people's daily lives, how people benefit from using IoT, what kinds of disadvantages IoT has brought, and the aspects that current IoT research has focused on. We then look at what factors are affecting potential IoT users when they are considering \textit{adopting} this new technology.
 
-When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. Thus, we attempt to know the IoT acceptance model for following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 4) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theory model.
+When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, the government, or some third-parties with good or bad purpose, which brings privacy risks to the users. Thus, we attempt to obtain a clear understanding of the IoT acceptance model before our further research for the following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have an effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 3) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theoretical model.
 
 \section{IoT Technology}
-The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence advance rapidly during the last two decades, the definition of the IoT has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
+The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through a unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence have advanced rapidly during the last two decades, the definition of IoT has evolved to more broadly covering a wide range of monitoring and control applications based on a network of sensing and actuating devices that are controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
-IoT can benefit both organizations and individual consumers in all above mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breach, etc~\cite{weinberg2015internet, lu2014overview, yu2015handling}.
+IoT can benefit both organizations and individual consumers in all above-mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breaches\cite{weinberg2015internet, lu2014overview, yu2015handling}.
 
-Previous studies mostly focused on the technical issues of IoT technologies~\cite{fantana2013iot, lazarescu2013design, shang2012internet}. For example, Uckelmann et al. systematically explained the architecture of future IoT~\cite{uckelmann2011architectural}. Chen et al. present a vision of IoT's applications in China~\cite{chen2014vision}. Guinard et al. described the IoT’s best practices based on the web technologies and proposed several prototypes using the web principles, which connect environmental sensor nodes, energy monitoring systems, and RFID-tagged objects to the web~\cite{guinard2011internet}. However, little attention has been devoted to, from the perspective of individual consumers, understanding how will the user of IoT will trade off the above mentioned benefits and privacy concerns of IoT technology when they consider adopting it~\cite{al2016modeling, gao2014unified, mital2018adoption}.
+Previous studies mostly focused on the technical issues of IoT technologies~\cite{fantana2013iot, lazarescu2013design, shang2012internet}. For example, Uckelmann et al. systematically explained the architecture of future IoT~\cite{uckelmann2011architectural}. Chen et al. present a vision of IoT's applications in China~\cite{chen2014vision}. Guinard et al. described the IoT’s best practices based on the web technologies and proposed several prototypes using the web principles, which connect environmental sensor nodes, energy monitoring systems, and RFID-tagged objects to the web~\cite{guinard2011internet}. However, little attention has been devoted to, from the perspective of individual consumers, understanding how the user of IoT will trade off the above mentioned benefits and privacy concerns of IoT technology when they consider adopting it~\cite{al2016modeling, gao2014unified, mital2018adoption}.
 
-Furthermore, researchers identified the security and privacy issues as the major challenges for consumer acceptance of the IoT technology’s user-oriented IoT applications (Medaglia \& Serbanati, 2010) [30]. Arguably, if the user find their privacy demands can not be satisfied (e.g. it's confusing to ) when using IoT devices after adopting them, they would probably finally give up using these devices.
+Furthermore, researchers identified security and privacy issues as the major challenges for consumer acceptance of the IoT technology’s user-oriented IoT applications~\cite{medaglia2010overview}. Arguably, if the users find that their privacy demands can not be satisfied when using IoT devices after adopting them, they would probably finally give up using these devices.
 
 \section{Model the Acceptance of IoT}
-In this section, we first discuss the origin Technology Acceptance Model and adapted Unified Theory of Acceptance and Use of Technology (UTAUT) model. Then we look at what are the factors that affect potential IoT users to adopt IoT systems. 
+In this section, we first discuss the original Technology Acceptance Model and the adapted Unified Theory of Acceptance and Use of Technology (UTAUT) model. Then we look at what are the factors that affect potential IoT users to adopt IoT systems. 
 
 \subsection{Technology Acceptance Model}
-Many research has attempt to examine the technology acceptance. Among them, the Technology Acceptance Model (TAM) is arguably the most popular model that explains how users come to accept and use a technology~\cite{davis1989user}. TAM suggests that an individual's \textit{Behavioral Intention} to Use an information technology is significantly dependent upon the individual's perception of \textit{Perceived Usefulness} and \textit{Perceived Ease Of Use} of that information technology. Specifically, perceived usefulness is the extent to which an individual believes that using a particular information technology will have a positive impact on his/her performance. Perceived ease of use is the extent to which an individual perceives that using a particular information technology will be free of effort. TAM also proposes that perceived ease of use can explain the variance in perceived usefulness.
-TAM have applied to a wide range of technology adoption contexts~\cite{wixom2005theoretical}, such as the adoption of PC~\cite{venkatesh2001longitudinal}, smartphones~\cite{park2007acceptance}, mobile marketing~\cite{bauer2005driving}, Internet banking~\cite{pikkarainen2004consumer}, facebook~\cite{lee2012effect, rauniar2014technology}, and online shopping~\cite{gefen2003trust}.
+The Technology Acceptance Model (TAM) is arguably the most popular model that explains how users come to accept and use a technology~\cite{davis1989user}. TAM suggests that an individual's \textit{Behavioral Intention} to Use an information technology is significantly dependent upon the individual's \textit{Perceived Usefulness} and \textit{Perceived Ease Of Use} of that information technology. Specifically, perceived usefulness is the extent to which an individual believes that using a particular information technology will have a positive impact on his/her performance. Perceived ease of use is the extent to which an individual perceives that using a particular information technology will be free of effort. TAM also proposes that perceived ease of use can explain the variance in perceived usefulness.
+TAM have been applied to a wide range of technology adoption contexts~\cite{wixom2005theoretical}, such as the adoption of PC~\cite{venkatesh2001longitudinal}, smartphones~\cite{park2007acceptance}, mobile marketing~\cite{bauer2005driving}, Internet banking~\cite{pikkarainen2004consumer}, facebook~\cite{lee2012effect, rauniar2014technology}, and online shopping~\cite{gefen2003trust}.
 
 \subsection{UTAUT}
-The unified theory of acceptance and use of technology (UTAUT) is a technology acceptance model proposed by Venkatesh et al.~\cite{venkatesh2003user}. Compared to TAM, UTAUT model identifies four key factors: 1) performance expectancy, 2) effort expectancy, 3) social influence, and 4) facilitating conditions, related to predicting behavioral intention to use a technology and actual technology use primarily in organizational contexts. The first three factors are theorized and found to influence behavioral intention to use a technology, while behavioral intention and facilitating conditions determine technology use. UTAUT also identifies four moderators (i.e., age, gender, experience, and voluntariness).
+The unified theory of acceptance and use of technology (UTAUT) is a technology acceptance model proposed by Venkatesh et al.~\cite{venkatesh2003user}. Compared to TAM, UTAUT identifies four key factors: 1) performance expectancy, 2) effort expectancy, 3) social influence, and 4) facilitating conditions, related to predicting behavioral intention to use a technology and actual technology use primarily in organizational contexts. The first three factors are theorized and found to influence behavioral intention to use a technology, while behavioral intention and facilitating conditions determine technology use. UTAUT also identifies four moderators (i.e., age, gender, experience, and voluntariness).
 
-UTAUT model has been applied or extended in the many contexts, such as electronic learning~\cite{wang2009interactive}, e-government~\cite{weerakkody2013examining}, and cloud computing~\cite{lian2015critical}. UTAUT is adapted upon previous models of technology adoption, and designed specifically to investigate users’ acceptance of a new technology and it has explanatory power higher than previous models (e.g. TAM). These make the UTAUT model suitable for understanding the acceptance of IoT.
+UTAUT has been applied or extended in many contexts, such as electronic learning~\cite{wang2009interactive}, e-government~\cite{weerakkody2013examining}, and cloud computing~\cite{lian2015critical}. UTAUT is developed upon previous models of technology adoption, and designed specifically to investigate users’ acceptance of a new technology and it has explanatory power higher than previous models (e.g. TAM). These make the UTAUT model suitable for understanding the acceptance of IoT.
 
 \subsection{The Acceptance of IoT}
 Researchers have attempted to identify the factors that affect the acceptance of IoT by customers. Acquity Group~\cite{acquity2014internet} conducted a user study investigating the concerns of customers to adopt the IoT. Based on more than 2000 US-based customer survey, They find that awareness of the technology, usefulness, price (cost), security, privacy are the main concerns of the customers. In~\cite{gao2014unified}, Gao and Bai present a user study (N=368) to investigate the factors that affect the acceptance of IoT in China. They used the factors of TAM (i.e. perceived ease of use and perceived usefulness) along with other factors such as trust, social influence, perceived enjoyment, and perceived behavioral control. Their results show that perceived usefulness, perceived ease of use, social influence, perceived enjoyment, and perceived behavioral control have significant effect on users' behavioral intention to use the IoT. 
-%Gefen et al. (2003) added trust, Pedersen (2005), analyzed based on cognitive and social factors, Porter and Donthu (2006) incorporated demographic variables, Yu et al. (2005) introduced perceived enjoyment and trust.
 
 \subsection{A preliminary study (original work)}
-We also conducted a preliminary/pilot study on Clemson University campus (N=15) with the aim to investigate the various factors that affect the adoption of IoT by interviewing with potential IoT users. The interviews were approximately 30-50 minutes in length and covered a wide range of open questions related to IoT (The questionnaire is attached in Appendix). These questions need participants to input their personal preferences about technology and self-perceived tech savviness. In this study, the conversations with our participants were recorded only after obtaining their consent. This study was approved by IRB. The entire recorded conversation was then transcribed manually. We then extracted keywords from participants' statements during the interview, such as ``privacy'' or ``ease of use''. These keywords were then grouped using card sorting and affinity diagram techniques. We then use a ground approach to creating a theory, which is shown in Figure~\ref{fig:pilotstudymodel}.
+We also conducted a preliminary/pilot study on Clemson University campus (N=15) with the aim to investigate the various factors that affect the adoption of IoT by interviewing with potential IoT users. The interviews were approximately 30-50 minutes in length and covered a wide range of open questions related to IoT (The questionnaire is attached in Appendix). These questions asked participants about their personal preferences regarding to the technology and self-perceived tech savviness. In this study, the conversations with our participants were recorded only after obtaining their consent. This study was approved by IRB. The entire recorded conversation was then transcribed manually. We then extracted keywords from participants' statements during the interview, such as ``privacy'' or ``ease of use''. These keywords were then grouped using card sorting and affinity diagram techniques. We then used a ground approach to creating a theory, which is shown in Figure~\ref{fig:pilotstudymodel}.
 
 \begin{figure}
 	\centering
@@ -39,7 +38,7 @@ We also conducted a preliminary/pilot study on Clemson University campus (N=15) 
 	\label{fig:pilotstudymodel}
 \end{figure}
 
-The results showed similar founding as fore-mentioned work~\cite{gao2014unified, al2016modeling}. However, in our study, we noticed an interesting phenomenon that no literature has mentioned -- once the trust to the manufacturers is established, it can propagate from the manufacturers to a Third-Party, which users are not aware of or even know about in the first place. We define this phenomenon as \textbf{Trust Chain}. An example of Trust Chain from our interview is:
+The results showed similar findings as aforementioned work~\cite{gao2014unified, al2016modeling}. However, in our study, we noticed an interesting phenomenon that no literature has mentioned -- once trust with the manufacturers is established, it can propagate from the manufacturers to a third-party, which users are not aware of or even know about in the first place. We define this phenomenon as \textbf{Trust Chain}. An example of Trust Chain from our interview is:
 
 \textit{I: ``Would you be alright if the manufacturer of those products collect your data and share with other organizations and provide more specific recommendation to you? Will you be OK with that?''}
 
@@ -53,7 +52,7 @@ The results showed similar founding as fore-mentioned work~\cite{gao2014unified,
 
 \textit{P: ``Yes, I trust them.''}
 
-As shown in Figure~\ref{fig:trustchain}, Trust Chain is established mostly because of the trust from the users to the manufacturers (i.e. the brand of the devices), and can arguably be categorized as an emotional behavior because users wouldn't have a clear sight at the benefits and risks when they choose to trust the Third-Parties that manufacturers choose to shared their data with. Such benefits and risks have been defined as abstract benefits and risk. Research has shown that in IoT domain, users are more likely to perceive concrete benefits and abstract risks, resulting this emotional behavior phenomenon [Kevin's work]. Such behavior could bring harm to their privacy and security. To be more rational, users are suggested to investigate the Third-Parties that will handle their personal data. Thus, we suggest the manufacturer/designers of the IoT privacy to provide users transparency and control on what third-parties they will sharing users' data with to reduce the risks of insecure Trust Chain sharing behavior.
+As shown in Figure~\ref{fig:trustchain}, Trust Chain is established mostly because of the trust from the users to the manufacturers (i.e. the brand of the devices), and can arguably be categorized as an emotional behavior because users would not have a clear sight at the benefits and risks when they choose to trust the third parties that manufacturers choose to shared their data with. Such benefits and risks have been defined as abstract benefits and risk. One of our current undergoing research has shown that, in IoT domain, users are more likely to perceive concrete benefits and abstract risks, resulting this emotional behavior phenomenon. Such behavior could bring harm to their privacy and security. To be more rational, we suggest users to investigate the third parties that will handle their personal data. Thus, we suggest the manufacturer/designers of the IoT privacy to provide users transparency and control on what third parties they will share users' data with to reduce the risks of insecure Trust Chain sharing behavior.
 
 \begin{figure}
 	\centering
@@ -68,7 +67,7 @@ Knowing all these factors that affect users' decision on adopting IoT device wil
 In this chapter, I have noted the following points: 1) IoT have grown in use rapidly with the advancing of RFID and other wireless sensor technologies. 2) IoT have brought convenience and enjoyment to our daily lives. 3) Privacy concern is an important factor that affect users' decisions when adopting IoT. 4) The acceptance of IoT is still not systematically examined.
 
 
-In the next chapter, we discuss the reason that cause the privacy issues in IoT, how effectively existing privacy control schemes are, and the work that aim to help users protect their privacy more effectively.
+In the next chapter, we discuss the reason that cause the privacy issues in IoT, how effective existing privacy control schemes are, and the work that aims to help users protect their privacy more effectively.
 
 
 
@@ -89,18 +88,18 @@ In the next chapter, we discuss the reason that cause the privacy issues in IoT,
 
 
 \chapter{Privacy setting technologies in IoT}\label{chapter:Relatedwork2}
-In chapter~\ref{chapter:Relatedwork1}, we discuss the development of IoT and its acceptance model. As IoT systems are gaining popularity and bringing privacy issues to us at the same time, it is urgent to study the reason that cause these privacy issues. By doing this, we can improve our design of IoT applications to protect IoT users' privacy, and make IoT more acceptable.
+In chapter~\ref{chapter:Relatedwork1}, we discuss the development of IoT and its acceptance model. As IoT systems are gaining popularity and also bring privacy issues at the same time, it is urgent to study the reason that cause these privacy issues. By doing this, we can improve our design of IoT applications to protect IoT users' privacy, and make IoT more acceptable.
 
 \section{Privacy Preference}
-Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to have 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that user's preferences change for every fitness/heath index. Weight was found the be the most important index~\cite{brar2004privacy}. 
+Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to belong to 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that users' preferences change for every fitness/heath index. Weight was found the be the most important index~\cite{brar2004privacy}. 
 
-In the other hand, users are found to have difficulties managing their privacy settings with current privacy-setting schemes. Liu et al. use an online survey (N=200) to investigate the difference between the desired privacy settings and the actual privacy settings of Facebook users. Their results show that 63\% of the privacy settings for photo sharing were not match the users' desired settings. In~\cite{madejski2012study}, Madejski et al. conduct user studies to find the difference between Facebook users’ sharing intentions and their actual privacy settings. Their results show that there is at least one violation in the privacy settings for each of the 65 participants.
+At the same time, users are found to have difficulties managing their privacy settings with current privacy-setting schemes. Liu et al. use an online survey (N=200) to investigate the difference between the desired privacy settings and the actual privacy settings of Facebook users. Their results show that 63\% of the privacy settings for photo sharing did not match the users' desired settings. In~\cite{madejski2012study}, Madejski et al. conduct user studies to find the difference between Facebook users’ sharing intentions and their actual privacy settings. Their results show that there is at least one violation in the privacy settings for each of the 65 participants.
 
-The reasons for the failure of existing privacy-setting schemes are diversified. One reason for this is the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people’s information disclosure behaviours
-are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}. people can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy grousp and adapt its privacy practices to the disclosure style of this group to satisfy different types of information and users. However, more privacy policies in the other would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, we used a data-driven approach (machine learning techniques) to discover the suitable smart privacy profiles for the user groups with different ``disclosure styles".
+The reasons for the failure of existing privacy-setting schemes are diverse. One reason for this is that the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people's information disclosure behaviors
+are affected by multiple dimensions~\cite{knijnenburg2013dimensionality}. People can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy groups and adapt their privacy practices to the disclosure style of this group to satisfy different types of information and users. However, on the other hand, the more privacy policies would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, in this thesis, we used a data-driven approach (machine learning techniques) to discover suitable smart privacy profiles for users with different ``disclosure styles".
 
 \section{Privacy in IoT}
-IoT systems are capable of providing a highly personalized services to their users~\cite{vallee2016personalization, etzion2014personalization, hemant2015internet}. Henka et al.~\cite{henka2016personalizing} propose an approach to personalize services in household IoT using the Global Public Inclusive Infrastructure's~\cite{vanderheiden2011creating} preference set to describe an individual's needs and preferences, and then adapting a smart environment accordingly. Russell et al.~\cite{russell2015personalization} use unobtrusive sensors and micro-controller to realize a human detection for further providing personalization in a scenario of a family making use of the IoT in their daily living.
+IoT systems are capable of providing a highly personalized services to their users~\cite{vallee2016personalization, etzion2014personalization, hemant2015internet}. Henka et al.~\cite{henka2016personalizing} propose an approach to personalize services in household IoT using the Global Public Inclusive Infrastructure's~\cite{vanderheiden2011creating} preference set to describe an individual's needs and preferences, and then adapting a smart environment accordingly. Russell et al.~\cite{russell2015personalization} use unobtrusive sensors and a micro-controller to realize human detection to provide personalization in a household IoT environment.
 
 Researchers have shown that privacy plays a limiting role in users' adoption of personalized services~\cite{teltzrow_2004}. For example, Awad and Krishnan~\cite{awad_2006} show that privacy concerns inhibit users' use of personalized services, and Sutanto et al.~\cite{sutanto_2013} demonstrated that privacy concerns can prevent people from using a potentially beneficial personalized application. Kobsa et al.~\cite{kobsa_2016} demonstrate that the personalization provider is an important determinant of users' privacy concerns.
 
