--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -87,6 +87,11 @@
 	%  ============================================================================
 	
 	\maketitle          % Generate the title page
+	
+	\doublespacing                             % Text should be double spaced
+	\setcounter{page}{2}                       % Abstract begins on page 2
+	\addtotoc{Abstract}{\input{abstract.tex}}  % Generate the abstract
+	
 	\singlespacing                             % Single space the lists
 	\input{publication.tex} \clearpage
 	\tableofcontents \clearpage                % Generate the Table of Contents
@@ -94,15 +99,20 @@
 	\addtotoc{List of Figures}{\listoffigures} % Generate the List of Figures
 	%\addtotoc{List of Listings}{\lstlistoflistings}
 	
-	\doublespacing % Text should be double spaced
+
 	%\addtotoc{Abstract}{\input{abstract.tex}}  % Generate the abstract
 	
 	%  ===========================================================================
 	\mainmatter % Begin main matter (pages are numbered with Arabic numerals)
 	%  ===========================================================================
-	
-	\input{abstract.tex}
-	\setcounter{page}{1}
+    \doublespacing % Text should be double spaced
+
+%
+% Here we have each chapter in a separate file.  Name these as you choose,
+% and include them in the order you want them to appear.  Be sure to use
+% the \inputfile command.
+%
+		
 	\input{1introduction.tex}
 	\input{2related_work.tex}
 	\input{3generalIoT.tex}
